InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/vlocity_ins__ProviderFeeScheduleEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a provider&apos;s negotiated fee rate for a specific service code. Master-detail child object of the Provider Fee Schedule.</description>
    <label>Provider Fee Schedule Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Fee Schedule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>