InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/fields/vlocity_ins__AdditionalFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdditionalFeeAmount__c</fullName>
    <description>If Fee Type is Additional Amount, this field will hold the additional fee amount value. The Provider Fee for this entry will be calculated by adding this amount to the fee from the Base Fee Schedule for the same code.</description>
    <label>Additional Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>