InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/fields/vlocity_ins__FeeType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FeeType__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rate Factor</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>