InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/fields/vlocity_ins__NegotiatedAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NegotiatedAmount__c</fullName>
    <label>Negotiated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>