InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/fields/vlocity_ins__ProviderFeeScheduleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderFeeScheduleId__c</fullName>
    <label>Provider Fee Schedule</label>
    <referenceTo>vlocity_ins__ProviderFeeSchedule__c</referenceTo>
    <relationshipLabel>Provider Fee Schedule Entries</relationshipLabel>
    <relationshipName>ProviderFeeScheduleEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>