InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderFeeScheduleEntry__c/fields/vlocity_ins__VlocityCodeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__VlocityCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Code</label>
    <referenceTo>vlocity_ins__VlocityCode__c</referenceTo>
    <relationshipLabel>Provider Fee Schedule Entries</relationshipLabel>
    <relationshipName>ProviderFeeScheduleEntries</relationshipName>
    <type>Lookup</type>
</CustomField>